Adventure App - Initial Changes.

--- a/YourOwnAdventureApp/appsettings.json
+++ b/YourOwnAdventureApp/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    //"AdventureDatabase": "Data Source=LAPTOP-HOMJ2QF8\\SQLEXPRESS; Initial Catalog=DB_YourOwnAdventure; persist security info=True; Integrated Security=SSPI;"
+    "AdventureDatabase": "Data Source=LAPTOP-HOMJ2QF8\\SQLEXPRESS;Initial Catalog=AdventureDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
