--- a/YourOwnAdventureApp/YourOwnAdventureApp.csproj
+++ b/YourOwnAdventureApp/YourOwnAdventureApp.csproj
@@ -9,8 +9,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.8" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\YourOwnAdventureApp.Models\YourOwnAdventureApp.Models\YourOwnAdventureApp.Models.csproj" />
+    <ProjectReference Include="..\YourOwnAdventureApp.Service\YourOwnAdventureApp.Service\YourOwnAdventureApp.Service.csproj" />
   </ItemGroup>
 
 </Project>
